@@ -1,11 +1,12 @@
 [comment {-*- tcl -*- doctools manpage}]
 [manpage_begin json n 1.0]
 [copyright {2006 ActiveState Software Inc.}]
-[moddesc   {JSON parser}]
+[moddesc   {JSON}]
 [titledesc {JSON parser}]
 [category  {CGI programming}]
 [require Tcl 8.4]
 [require json [opt 1.0]]
+[keywords json javascript {data exchange} {exchange format}]
 [description]
 [para]
 
@@ -84,17 +85,6 @@ multi-element list (a dict).
 Image {IDs {116 943 234 38793} Thumbnail {Width 100 Height 125 Url http://www.example.com/image/481989943} Width 800 Height 600 Title {View from 15th Floor}}
 }]
 
-[section {BUGS, IDEAS, FEEDBACK}]
-
-This document, and the package it describes, will undoubtedly contain
-bugs and other problems.
-
-Please report such in the category [emph json] of the
-[uri {http://sourceforge.net/tracker/?group_id=12883} {Tcllib SF Trackers}].
-
-Please also report any ideas for enhancements you may have for either
-package and/or documentation.
-
-
-[keywords json javascript {data exchange} {exchange format}]
+[vset CATEGORY json]
+[include ../doctools2base/include/feedback.inc]
 [manpage_end]
